wbname wrap fix

--- a/index.css
+++ b/index.css
@@ -108,6 +108,7 @@ body {
 
 .wbname {
 	cursor: pointer;
+	white-space: nowrap;
 }
 
 .wbmap {
